Hotfix collection assets
