# specs/api.yaml
@@ -711,30 +711,25 @@ paths:
               type: object
               required:
                 - assets
-                - assets_data
               properties:
                 assets:
                   type: array
                   items:
                     type: string
                     format: binary
-                assets_data:
-                  description: |
-                    JSON stringified array of AssetUploadData array
-                  type: string
-                  items:
-                    $ref: '#/components/schemas/AssetUploadData'
       responses:
         '200':
           description: Ok
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AddCollectionAssetResponse'
+                $ref: '#/components/schemas/GenericResponse'
     put:
       tags:
         - nft_collection
       summary: Update assets data; e.g name, quantity, price, attributes
+      description: |
+        N.B To mass update all tokens in a colleciton, just send one object in the array body and set id to 00000000-0000-0000-0000-000000000000.
       requestBody:
         content:
           application/json:
@@ -1544,6 +1539,9 @@ components:
         - name
         - amount
       properties:
+        id:
+          type: string
+          format: uuid
         name:
           minLength: 3
           maxLength: 30
@@ -2137,22 +2135,6 @@ components:
           items:
             $ref: '#/components/schemas/NftAttribute'
 
-    AddCollectionAssetResponse:
-      example:
-        {
-          "error": false,
-          "code": 200,
-          "data": {
-            "your_file_id": "601b746a-e1ac-481f-8e27-d5aa8d7bb4c2"
-          },
-          "message": "Successful"
-        }
-      allOf:
-        - $ref: '#/components/schemas/GenericResponse'
-        - type: object
-          properties:
-            data:
-              type: object
 
     RemoveCollectionAssetsResponse:
       allOf:
@@ -2197,9 +2179,9 @@ components:
         price:
           type: number
         attributes:
-          type: string
+          type: array
           description: |
-            JSON stringified array of NftAttribute object
+            Array of NftAttribute object
           items:
             $ref: '#/components/schemas/NftAttribute'
 
